force-app/main/default/objects/Allocate_Team_Name_and_Queue__mdt/Allocate_Team_Name_and_Queue__mdt.object-meta.xml
<CustomObject>
    <description>Used to update Team Name and Team Queue based on the Case Type and Sub-Type.</description>
    <label>Allocate Team Name and Queue</label>
    <pluralLabel>Allocate Team Name and Queues</pluralLabel>
</CustomObject>