force-app/main/default/objects/Allocate_Team_Name_and_Queue__mdt/fields/Case_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Type__c</fullName>
    <description>Case Sub Type Values</description>
    <label>Case Sub Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>