force-app/main/default/objects/Allocate_Team_Name_and_Queue__mdt/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>Case Type values</description>
    <label>Case Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>