force-app/main/default/objects/Allocate_Team_Name_and_Queue__mdt/fields/Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Name__c</fullName>
    <description>Team Name that needs to be assigned to case based on Case Type &amp; Case Sub-Type</description>
    <label>Team Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>