force-app/main/default/objects/Allocate_Team_Name_and_Queue__mdt/fields/Team_Queue__c.field-meta.xml
<CustomField>
    <fullName>Team_Queue__c</fullName>
    <label>Team Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>